--- a/style.css
+++ b/style.css
@@ -161,14 +161,25 @@ a.nav-link{
 	text-align:center;
 }
 
- h3{
+h3{
 	padding-bottom: 15px;
-    letter-spacing: normal;
-    font-family: var(--main-font-family);
+  letter-spacing: normal;
+  font-family: var(--main-font-family);
 	font-style: normal;
 	font-size: 60px;
 	color: var(--main-fonts-color);
 	text-shadow: 0px 0px 40px var(--main-decor-color);
+  transition: background-position 275ms ease;
+  background: linear-gradient(to right, midnightblue, midnightblue 50%, #fff 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+}
+
+h3:hover {
+  background-position: 0 100%;
 }
 
 
@@ -236,12 +247,31 @@ a.nav-link{
 .card{
 	display: flex;
 	flex-direction: column;
+  align-items: center;
   justify-content:center;
 	margin: 20px;
-	width: 315px;
-	height: 200px;
 	border-radius:12px;
   background:var(--main-decor-color);
+  animation: slide-up 0.4s ease;
+  width: 315px;
+	height: 200px;
+  transition: width 2s;
+}
+
+.card:hover {
+  width: 630px;
+}
+
+
+@keyframes slide-up {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .card img{
