--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ h3{
 	color: var(--main-fonts-color);
 	text-shadow: 0px 0px 40px var(--main-decor-color);
   transition: background-position 275ms ease;
-  background: linear-gradient(to right, #5E147D, #5E147D 50%, #fff 50%);
+  background: linear-gradient(to right, rgb(55, 1, 78), rgb(55, 1, 78), 50%, #fff 50%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
