--- a/style.css
+++ b/style.css
@@ -255,13 +255,14 @@ h3:hover {
   animation: slide-up 0.4s ease;
   width: 315px;
 	height: 200px;
+	transition: background-color 2s;
   /* transition: width 2s; */
 }
 
 .card:hover {
   /* width: 630px; */
   background-color: #1E003D;
-  -webkit-transition: background-color .4s;
+  /* -webkit-transition: background-color .4s; */
 }
 
 
