--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ header{
 	width: 100%;
 	height: 70px;
 	display: flex;
-    align-items: center; 
+  align-items: center; 
 	justify-content: space-around; 
-    background: transparent;
+  background: transparent;
 	position: fixed;
 	top: 0;
 	transition: 0.3s;
@@ -104,6 +104,7 @@ header:hover{
 
 a.nav-link{
 	margin: 2px;
+  	border-radius: 5px;
 	padding: 5px 10px;
 	text-decoration: none;
 	color: var(--main-fonts-color);
