--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header:hover{
 
 a.nav-link{
 	margin: 2px;
-  	border-radius: 5px;
+  border-radius: 5px;
 	padding: 5px 10px;
 	text-decoration: none;
 	color: var(--main-fonts-color);
@@ -299,7 +299,8 @@ h3:hover {
 }
 
 .card .work-content:hover{
-    color:#202020;
+  	color: var(--main-decor-color);
+	text-shadow: 0 0 11px var(--main-decor-color);
 }
 
 .card:hover{
