change gif for explainer card

--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ h3:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/a010-markusspiske-feb19-msp_1902_5023.jpg?w=1300&dpr=1&fit=default&crop=default&q=80&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=e8441de3253bcfd9175c2ab634c52a62);
+  background-image: url(https://media3.giphy.com/media/3o8doWDjWvHz61qvfy/giphy.gif?cid=ecf05e47fokrpr7j9wwj9qpne10jrbbvv22kdc2n2ixxiyij&rid=giphy.gif);
   background-repeat: no-repeat;
   background-size: 150px 100px;
 }
