--- a/style.css
+++ b/style.css
@@ -613,7 +613,8 @@ h3:hover {
 footer {
 	width: 100%;
 	height: 100%;
-    background-color: var(--main-header-background);
+  background-color: var(--main-header-background);
+  font-family: var(--main-font-family);
 }
 
 .copyright {
