host images to deviantart

--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ h3:hover {
 
 .lefter {
   transform: translateX(-60px) translateZ(-50px) rotateY(-10deg);
-  background-image: url(https://media-exp1.licdn.com/dms/image/sync/C4D27AQFTPc-RD8C-Fg/articleshare-shrink_480/0/1614194813750?e=1614452400&v=beta&t=Jj9VQwJgMjLMkijnou5LpHbZ_x4rjtSkmtAa9QQh4R0);
+  background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/0991ffe7-b38c-45c5-974a-403f4f4da877/defem87-fc8c6c3c-a55f-4576-9a8a-8a03c5505ef0.jpg/v1/fill/w_1280,h_605,q_75,strp/bwa_view_by_raulsposito_defem87-fullview.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD02MDUiLCJwYXRoIjoiXC9mXC8wOTkxZmZlNy1iMzhjLTQ1YzUtOTc0YS00MDNmNGY0ZGE4NzdcL2RlZmVtODctZmM4YzZjM2MtYTU1Zi00NTc2LTlhOGEtOGEwM2M1NTA1ZWYwLmpwZyIsIndpZHRoIjoiPD0xMjgwIn1dXSwiYXVkIjpbInVybjpzZXJ2aWNlOmltYWdlLm9wZXJhdGlvbnMiXX0.dQnPiMVoct3sw550F6G4Iu_PKgb5zTVOLtm9wSS-gqA);
   background-repeat: no-repeat;
   background-size: 210px 150px;
 }
@@ -465,19 +465,19 @@ h3:hover {
 }
 .center {
   opacity: 1;
-  background-image: url(https://media-exp1.licdn.com/dms/image/sync/C4D27AQFXZxJZkI77Fg/articleshare-shrink_480/0/1613171643670?e=1614452400&v=beta&t=QiXxuj_zLP9MaxjLAuX0S35ZtO_2zBkcPa5r5bih4gA);
+  background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/0991ffe7-b38c-45c5-974a-403f4f4da877/defemb8-7a820b99-71bc-4541-a892-58dd3d837dc5.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvMDk5MWZmZTctYjM4Yy00NWM1LTk3NGEtNDAzZjRmNGRhODc3XC9kZWZlbWI4LTdhODIwYjk5LTcxYmMtNDU0MS1hODkyLTU4ZGQzZDgzN2RjNS5qcGcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.84aXQPf1CtLaLxeLyOcJbc2uJdDcBBH0N5A-lVjQZ10);
   background-repeat: no-repeat;
   background-size: 210px 150px;
 }
 .right {
   transform: translateX(30px) translateZ(-25px) rotateY(5deg);
-  background-image: url(https://media-exp1.licdn.com/dms/image/sync/C4D27AQFmf1iVUzfXrA/articleshare-shrink_480/0/1614194813867?e=1614452400&v=beta&t=xYflJPQtpK_Gh8TdFg1gax7wykKFaGpR_J7pmbz_UVE);
+  background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/0991ffe7-b38c-45c5-974a-403f4f4da877/defemdu-6547f99b-72c1-4b65-a9ea-e22a24d314d6.jpg/v1/fill/w_1280,h_448,q_75,strp/gs_view_by_raulsposito_defemdu-fullview.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD00NDgiLCJwYXRoIjoiXC9mXC8wOTkxZmZlNy1iMzhjLTQ1YzUtOTc0YS00MDNmNGY0ZGE4NzdcL2RlZmVtZHUtNjU0N2Y5OWItNzJjMS00YjY1LWE5ZWEtZTIyYTI0ZDMxNGQ2LmpwZyIsIndpZHRoIjoiPD0xMjgwIn1dXSwiYXVkIjpbInVybjpzZXJ2aWNlOmltYWdlLm9wZXJhdGlvbnMiXX0.dKQnI-l_0UqPMlsES4Q8y4sEgzW9HN-x6FyduuPtJfU);
   background-repeat: no-repeat;
-  background-size: fit;
+  background-size: 250px 150px;
 }
 .righter {
   transform: translateX(60px) translateZ(-50px) rotateY(10deg);
-  background-image: url(https://media-exp1.licdn.com/dms/image/sync/C4D27AQGlLbiwuEHYIg/articleshare-shrink_800/0/1614194813856?e=1614452400&v=beta&t=4EOFhrwW0hds_H4EfI5ixRc8SXG6vs_dhPvx5j_XT7g);
+  background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/0991ffe7-b38c-45c5-974a-403f4f4da877/defemlz-07947742-f1c1-46ce-b448-d94ed1bf54c8.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvMDk5MWZmZTctYjM4Yy00NWM1LTk3NGEtNDAzZjRmNGRhODc3XC9kZWZlbWx6LTA3OTQ3NzQyLWYxYzEtNDZjZS1iNDQ4LWQ5NGVkMWJmNTRjOC5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.OeOHsQNI6gxWOslQ0TLOftDjwUxZdBfBRdHyFQCym_E);
   background-repeat: no-repeat;
   background-size: 210px 150px;
 }
